baculum: Fix auth setting radio buttons alignement

--- a/gui/baculum/themes/Baculum-v1/style.css
+++ b/gui/baculum/themes/Baculum-v1/style.css
@@ -1249,3 +1249,12 @@ label.normal {
 	word-wrap: break-word;
 }
 /* END Overwrite opentip styles */
+
+.auth_setting {
+	width: 660px;
+	margin: 0 auto;
+}
+
+#config .auth_setting {
+	margin: 0 !important;
+}
